# lilbinboy

./: .gitignore  EULA  LICENSE  README.md  about.html  main.py  pyproject.toml  pysidedeploy.spec  quicklaunch.sh  setup.py  temp_patch.py  test_tc.py
.github/workflows/: build-release.yaml  build-windows-test.yaml  test-parse-version.yaml
build_tools/: mac_create_dmg.sh  mac_dmgbuild_settings.py  win_create_installer.iss
build_tools/bkgs/: macos_dmg_bkg.tiff
build_tools/icons/: macos_lilbinboy.icns
build_tools/installer/: lbb_windows.iss
lilbinboy/: __init__.py  __main__.py
lilbinboy/lbb_common/: __init__.py  dlg_errorlog.py  helper_funcs.py  log_handler.py  paint_delegates.py  resources.py  settings_manager.py  wdg_clipcolorpicker.py  wdg_timecodespinbox.py  wdg_timelineview.py  wdg_utilitytab.py  windowmanager.py  wnd_about.py  wnd_checkforupdates.py  wnd_main.py
lilbinboy/lbb_features/: __init__.py
lilbinboy/lbb_features/trt/: cnt_runtime.py  cnt_trt.py  db_hist_sqlite.py  dlg_choose_columns.py  dlg_marker.py  dlg_sequence_selection.py  exporters_trt.py  hist_main.py  logic_trt.py  (+17 more)
lilbinboy/logos/: logo_cleanup.psd
lilbinboy/res/: build_resources.sh  resources.qrc
themesong/: lbb.xrns
widget_tests/: test_aboutbox.py  test_checkupdates.py  test_clipcolorpainter.py  test_clipcolorpicker.py  test_history.py  test_lbtimelineview.py  test_logshower.py  test_matchbymarkerdlg.py  test_newspinbox.py  test_projectview.py  test_runtime.py  test_sequenceselection.py  test_settingsmanager.py  test_timecodespinbox.py  test_trttreeview.py  test_uniquename.py
(+2 files in other folders)
